Updates to server

--- a/site/front_end/templates/index.html
+++ b/site/front_end/templates/index.html
@@ -351,14 +351,14 @@
         </script>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="/front_end/js/libs/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+        <script src="/front_end/js/libs/bootstrap.min.js"></script>
         <!-- Ember -->
         <script src="/front_end/js/libs/handlebars-v3.0.3.js"></script>
-        <script src="http://builds.emberjs.com/beta/ember.js"></script>
-        <script src="http://builds.emberjs.com/beta/ember-data.js"></script>
-        <script src="http://builds.emberjs.com/beta/ember-template-compiler.js"></script>
+        <script src="/front_end/js/libs/ember.min.js"></script>
+        <script src="/front_end/js/libs/ember-data.js"></script>
+        <script src="/front_end/js/libs/ember-template-compiler.js"></script>
         <!-- Util -->
         <script src="/front_end/js/util.js"></script>
         <!-- App -->
