--- a/site/front_end/templates/index.html
+++ b/site/front_end/templates/index.html
@@ -355,9 +355,9 @@
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="/front_end/js/libs/bootstrap.min.js"></script>
         <!-- Ember -->
-        <script src="/front_end/js/libs/handlebars-v3.0.3.js"></script>
+        <script src="/front_end/js/libs/handlebars.min.js"></script>
         <script src="/front_end/js/libs/ember.min.js"></script>
-        <script src="/front_end/js/libs/ember-data.js"></script>
+        <script src="/front_end/js/libs/ember-data.min.js"></script>
         <script src="/front_end/js/libs/ember-template-compiler.js"></script>
         <!-- Util -->
         <script src="/front_end/js/util.js"></script>
