--- a/site/front_end/templates/index.html
+++ b/site/front_end/templates/index.html
@@ -9,6 +9,7 @@
         <title>Freelo.gg</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="icon" type="image/png" href="/front_end/images/league-icons/challenger.png">
 
         <!-- Bootstrap -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
