--- a/site/front_end/templates/index.html
+++ b/site/front_end/templates/index.html
@@ -12,7 +12,7 @@
 	<link rel="icon" type="image/png" href="/front_end/images/league-icons/challenger.png">
 
         <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="/front_end/css/bootstrap.min.css" />
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
