--- a/site/front_end/static/css/application.less
+++ b/site/front_end/static/css/application.less
@@ -549,7 +549,7 @@ table.table-stats {
 .overall-performance,
 .highlights-and-tips {
   text-align: left;
-  height: 261px;
+  margin: 10px 0;
 
   .loading {
     line-height: 200px;
