initial addition of champion filter, needs reworking

--- a/site/front_end/static/css/application.less
+++ b/site/front_end/static/css/application.less
@@ -631,3 +631,37 @@ table.table-stats {
     text-align: center;
   }
 }
+
+.aggregate-analysis {
+  margin-left: 0;
+  margin-right: 0;
+  padding: 5px;
+}
+
+.tt-menu {
+  width: 100%;
+
+  .tt-dataset {
+    .tt-suggestion {
+      text-align: left;
+      background: #fff;
+      padding: 5px 10px;
+      cursor: default;
+
+      &:hover,
+      &.tt-cursor {
+        background: #eee;
+      }
+
+      img {
+        width: 30px;
+        height: 30px;
+      }
+
+      span {
+        display: inline-block;
+        margin-left: 10px;
+      }
+    }
+  }
+}
