--- a/site/front_end/static/css/application.css
+++ b/site/front_end/static/css/application.css
@@ -530,3 +530,29 @@ tr.row-0 .league-decorator .league-offset,
 .highlights-and-tips .highlight-average {
   text-align: center;
 }
+.aggregate-analysis {
+  margin-left: 0;
+  margin-right: 0;
+  padding: 5px;
+}
+.tt-menu {
+  width: 100%;
+}
+.tt-menu .tt-dataset .tt-suggestion {
+  text-align: left;
+  background: #fff;
+  padding: 5px 10px;
+  cursor: default;
+}
+.tt-menu .tt-dataset .tt-suggestion:hover,
+.tt-menu .tt-dataset .tt-suggestion.tt-cursor {
+  background: #eee;
+}
+.tt-menu .tt-dataset .tt-suggestion img {
+  width: 30px;
+  height: 30px;
+}
+.tt-menu .tt-dataset .tt-suggestion span {
+  display: inline-block;
+  margin-left: 10px;
+}
