--- a/site/front_end/static/css/application.less
+++ b/site/front_end/static/css/application.less
@@ -635,6 +635,7 @@ table.table-stats {
 .aggregate-analysis {
   margin-left: 0;
   margin-right: 0;
+  margin-top: 20px;
   padding: 5px;
 }
 
@@ -662,6 +663,28 @@ table.table-stats {
         display: inline-block;
         margin-left: 10px;
       }
+    }
+  }
+}
+
+.ui.dropdown {
+  padding: 0 !important;
+
+  .icon.dropdown {
+    padding: 0 !important;
+    margin: 0 !important;
+    top: 50% !important;
+    margin-top: -7px !important;
+  }
+
+  .text,
+  .item {
+    height: 3em;
+    line-height: 3em;
+    padding: 0 .8em;
+
+    img {
+      height: 25px;
     }
   }
 }
