added fixes related to updating for new season

--- a/site/front_end/templates/index.html
+++ b/site/front_end/templates/index.html
@@ -167,7 +167,7 @@
 
                             </div>
 
-                            <h2>Latest Ranked Solo Queue Games</h2>
+                            <h2>Latest Season 2016 Ranked Solo Queue Games</h2>
                         {{/if}}
 
                         {{#each matches as |match|}}
